Revert "Merge branch 'feature/fe-mainpage-ui' into 'dev'"
This reverts commit 04ad3fa5aff48f692cbe1714e4a7b707c9b045d3, reversing
changes made to 2a43654085a20466b7abb5b1ac25ae40a393b00d.